--- a/styles/style.css
+++ b/styles/style.css
@@ -1,16 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
-* {
-    text-decoration: none;
-    margin: 0;
-    padding: 0;
-}
-
 body {
     background-color: var(--bg-color);
     color: var(--text-color);
     font-family: "Inter", sans-serif;
     font-weight: 400;
+}
+
+a {
+    text-decoration: none;
 }
 
 .cabecalho {
