--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import 'reset.css';
+@import 'vars.css';
+
 
 body {
     background-color: var(--bg-color);
